# fastapi-routers-1

./: README.md  dependencies.py  main.py  pyproject.toml
app/: main.py
app/internal/: admin.py
src/: main.py
src/routers/: items.py
