[tool.poetry]
name = "fastapi-routers"
version = "0.1.0"
description = ""
authors = ["Ven <CareTiger@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "fastapi_routers"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.22.0"
fastapi = "^0.98.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
